--- a/source/options/options.css
+++ b/source/options/options.css
@@ -1,27 +1,27 @@
 body {
-	margin: 10px auto;
-	width: 200px;
-	height: 100px
+  margin: 10px auto;
+  width: 200px;
+  height: 100px;
 }
 #file {
-	width: 200px;
-	text-align: center;
-	margin: auto;
-	background-color: purple;
-	color: white;
+  width: 200px;
+  text-align: center;
+  margin: auto;
+  background-color: purple;
+  color: white;
 }
 #feedback {
-	margin: auto;
-	font-size: 15px;
-	text-align: center;
+  margin: auto;
+  font-size: 15px;
+  text-align: center;
 }
 .regular {
-	color: black;
+  color: black;
 }
 .error {
-	color: red;
+  color: red;
 }
 .success {
-	color: darkgreen;
-	background-color: lightgreen
+  color: darkgreen;
+  background-color: lightgreen;
 }
